--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,5 @@
 /*=============== GOOGLE FONTS ===============*/
-@import url("https://fonts.googleapis.com/css2?family=Syne:wght@400;500;600&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Syne:wght@400;500;600&display=swap');
 
 /*=============== VARIABLES CSS ===============*/
 :root {
@@ -18,7 +18,7 @@
       -> Click on tab (Color Conversion)
       -> Copy the color mode (HSL)
   */
-  --hue: 255;
+  --hue: 770;
   --first-color: hsl(var(--hue), 90%, 60%);
   --first-color-alt: hsl(var(--hue), 82%, 56%);
   --first-color-light: hsl(var(--hue), 40%, 80%);
@@ -148,31 +148,216 @@ img {
   margin-bottom: 2rem;
 }
 
+.perfil{
+    width: 250px;
+    height: 250px;
+    background-color: var(--body-color);
+    border: 8px solid var(--first-color);
+    border-radius: 50%;
+    display: grid;
+    place-items: center;
+    transition: background-color .4s;
+}
+
+.perfil__content{
+    width: 180px;
+    height: 180px;
+    border: 10px solid var(--first-color);
+    border-radius: 50%;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    background: linear-gradient(180deg,
+                hsl var((--hue),90%, 80%),
+                hsl var((--hue), 90%, 30%));
+}
+
+.perfil__img{
+    width: 150px;
+}
+
 .main {
   overflow: hidden;
 }
 
 /*=============== HEADER & NAV ===============*/
+.header{
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    background-color: transparent;
+    z-index: var(--z-fixed);
+    transition: background-color .4s, box-shadow .4s;
+}
 
+.nav{
+    position: relative;
+    height: var(--header-height);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.nav__logo{
+    color: var(--white-color);
+    font-weight: var(--font-semi-bold);
+    transition: color .4s;
+}
+
+.nav__toggle,
+.nav__close{
+    display: inline-flex;
+    font-size: 1.25rem;
+    cursor: pointer;
+}
+
+.nav__toggle{
+    color: var(--white-color);
+    transition: color 4.s;
+}
+
+.nav__close{
+    color: var(--title-color);
+}
 
 /* Navigation for mobile devices */
+@media screen and (max-width: 1150px){
+    .nav__menu{
+        position: fixed;
+        top: -100%;
+        left: 0;
+        background-color: var(--body-color);
+        width: 100%;
+        box-shadow: 0 12px 24px var(--shadow-color);
+        padding-block: 5rem 4rem;
+        transition: top .4s;
+    }
+}
+
+.nav__list{
+    display: flex;
+    flex-direction: column;
+    row-gap: 2.5rem;
+    text-align: center;
+}
+
+.nav__link{
+    color: var(--title-color);
+    font-weight: var(--font-semi-bold);
+    transition: color .4s;
+}
+
+.nav__link:hover{
+    color: var(--first-color);
+}
+
+.nav__close{
+    position: absolute;
+    top: 1.15rem;
+    right: 1.5rem;
+}
+
 
 
 /* Show menu */
+.show-menu{
+    top: 0;
+}
 
 
 /* Change background header */
+/* .bg-header{
+    background-color: var(--body-color);
+    box-shadow: 0 2px 16px var(--shadow-color);
+}
+
+.bg-header :is(.nav__logo, .nav__toggle){
+    color: var(--title-color);
+} */
 
 
 /* Header background color of other pages */
+.header-pages{
+    background-color: var(--body-color);
+}
 
+.header-pages :is(.nav__logo, .nav__toggle){
+    color: var(--title-color);
+}
 
 /*=============== BUTTON ===============*/
+.button{
+    display: inline-block;
+    background-color: var(--first-color);
+    color: var(--white-color);
+    font-weight: var(--font-semi-bold);
+    padding: 1rem 2rem;
+    transition: background-color .4s, box-shadow .4s;
+}
 
+.button:hover{
+    background-color: var(--first-color-alt);
+    box-shadow: 0 8px 24px hsla(var(--hue),90%, 30%, .3);
+}
 
 /*=============== HOME ===============*/
+.home{
+    position: relative;
+    border-bottom: 8px solid var(--first-color);
+}
 
+.home__rectangle{
+    width: 100%;
+    height: 220px;
+    background-color: var(--first-color);
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
 
+.home__container{
+    padding-block: 1rem 3rem;
+}
+
+.home__perfil{
+    justify-self: center;
+}
+
+.home__data{
+    row-gap: .75rem;
+    text-align: center;
+}
+
+.home__name{
+    font-size: var(--biggest-font-size);
+}
+
+.home__profession{
+    font-size: var(--h2-font-size);
+}
+
+.home__social{
+    display: flex;
+    justify-content: center;
+    column-gap: 1rem;
+}
+
+.home__social-link{
+    font-size: 1.5rem;
+    color: var(--title-color);
+    transition: color .4s;
+}
+
+.home__social-link:hover{
+    color: var(--first-color);
+}
+
+.home__button{
+    justify-self: center;
+}
 /*=============== ABOUT ===============*/
 
 
